<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lnb" />

        <Spinner
            android:id="@+id/spinner_lnb_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp" />

        <CheckBox
            android:id="@+id/checkBox_satcr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_weight="1"
            android:text="@string/satcr" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_ub_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_weight="1"
        android:orientation="horizontal"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ub_slot" />

            <Spinner
                android:id="@+id/spinner_ub_slot"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="0" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/frequency" />

            <EditText
                android:id="@+id/edit_ub_freq"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="1284"
                android:ems="10"
                android:inputType="number"
                android:textAlignment="center" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>
