<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setup.FragmentDvbtSetup">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/dvbt"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <CheckBox
            android:id="@+id/dvbt2Switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/dvbt_2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title" />

        <TextView
            android:id="@+id/frequency_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/frequency"
            app:layout_constraintStart_toStartOf="@+id/dvbt2Switch"
            app:layout_constraintTop_toBottomOf="@+id/dvbt2Switch" />

        <EditText
            android:id="@+id/frequency_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:ems="10"
            android:inputType="number"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/frequency_text"
            app:layout_constraintTop_toTopOf="@id/frequency_text" />

        <TextView
            android:id="@+id/bw_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/bandwidth"
            app:layout_constraintStart_toStartOf="@id/frequency_text"
            app:layout_constraintTop_toBottomOf="@id/frequency_text" />

        <Spinner
            android:id="@+id/bw_spinner"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/frequency_value"
            app:layout_constraintTop_toTopOf="@id/bw_text" />

        <TextView
            android:id="@+id/ts_mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/transmission_mode"
            app:layout_constraintStart_toStartOf="@id/frequency_text"
            app:layout_constraintTop_toBottomOf="@id/bw_text" />

        <Spinner
            android:id="@+id/ts_spinner"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/bw_spinner"
            app:layout_constraintTop_toTopOf="@id/ts_mode" />

        <Button
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="35dp"
            android:text="start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>