<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".setup.FragmentIsdbSetup">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/isdbt"
            android:textSize="36sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/frequency_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:text="@string/frequency"
            app:layout_constraintStart_toStartOf="@+id/title"
            app:layout_constraintTop_toBottomOf="@+id/title" />

        <EditText
            android:id="@+id/frequency_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:ems="10"
            android:inputType="number"
            android:textSize="24sp"
            app:layout_constraintStart_toEndOf="@id/frequency_text"
            app:layout_constraintTop_toTopOf="@id/frequency_text" />

        <TextView
            android:id="@+id/modulation_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/modulation"
            app:layout_constraintStart_toStartOf="@id/frequency_text"
            app:layout_constraintTop_toBottomOf="@id/frequency_text" />

        <Spinner
            android:id="@+id/modulation_spinner"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/frequency_value"
            app:layout_constraintTop_toTopOf="@id/modulation_text" />

        <TextView
            android:id="@+id/bandwidth_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:text="@string/bandwidth"
            app:layout_constraintStart_toStartOf="@id/modulation_text"
            app:layout_constraintTop_toBottomOf="@id/modulation_text" />

        <Spinner
            android:id="@+id/bandwidth_spinner"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="@id/modulation_spinner"
            app:layout_constraintTop_toTopOf="@id/bandwidth_text" />

        <Button
            android:id="@+id/button_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="35dp"
            android:text="start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>